--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:4200
 quarkus.http.cors.headers=accept, origin, authorization, content-type, x-requested-with
 quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
+quarkus.datasource.jdbc.url=localhost:3306
+quarkus.datasource.password=root
+quarkus.datasource.username=root
